--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.18.1",
     "next": "15.3.3",
     "react": "^19.0.0",
