--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.3",
     "@types/styled-components": "^5.1.34",
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.18.1",
