--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@supabase/supabase-js": "^2.50.3",
     "@types/styled-components": "^5.1.34",
     "@vercel/analytics": "^1.5.0",
+    "form-data": "^4.0.4",
     "framer-motion": "^12.18.1",
     "next": "15.3.3",
+    "node-fetch": "^2.7.0",
     "pdfjs-dist": "^5.3.93",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "styled-components": "^6.1.19",
-    "tesseract.js": "^6.0.1"
+    "tesseract.js": "^2.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
