--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@supabase/supabase-js": "^2.50.3",
     "@types/styled-components": "^5.1.34",
     "@vercel/analytics": "^1.5.0",
+    "canvas": "^3.1.2",
     "form-data": "^4.0.4",
     "framer-motion": "^12.18.1",
     "next": "15.3.3",
     "node-fetch": "^2.7.0",
+    "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.3.93",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
