--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "elchef-pages"
 compatibility_date = "2024-11-12"
-pages_build_output_dir = ".vercel/output"
+pages_build_output_dir = ".vercel/output/static"
 
 ## [pages] table is not supported by this runner; using pages_build_output_dir instead
 
